# phaxtract

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  project.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SPECIFICATION.md  STATUS.md
gold/: README.md  monthly_etat_des_ventes.expected.json  period_etat_des_ventes.expected.json
scripts/: benchmark_nuextract.py  build_finetune_data.py  convert_gold.py  finetune_nuextract.py  generate_gold.py  pair_gold.py
src/phaxtract/: __init__.py  benchmark.py  cli.py  convert_docai.py  extract_ai.py  extract_native.py  finetune_data.py  fingerprint.py  ingest.py  normalize.py  nuextract_engine.py  nuextract_template.py  pipeline.py  schema.py  synth.py  validate.py
src/phaxtract/config/: __init__.py  column_aliases.json  lgo_fingerprints.json  loader.py  month_abbreviations.json
tests/: conftest.py
tests/unit/: test_benchmark.py  test_benchmark_photo.py  test_cli.py  test_config_loader.py  test_convert_docai.py  test_extract_ai.py  test_extract_native.py  test_extract_native_roundtrip.py  test_finetune_data.py  test_fingerprint.py  test_ingest.py  test_normalize.py  test_nuextract_engine.py  test_pipeline.py  test_schema.py  test_synth.py  test_validate.py
