[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phaxtract"
version = "0.1.0"
description = "Local pharmacy sales statement extractor (PDF/photos) → structured JSON"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "17Sx" }]
keywords = ["pharmacy", "pdf", "extraction", "document-ai", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3",
    "typer>=0.12",
    "rich>=13.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
ai = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.45",
    "peft>=0.13",
    "accelerate>=1.0",
    "pillow>=10.0",
]
ui = ["streamlit>=1.40"]

[project.scripts]
phaxtract = "phaxtract.cli:app"

[project.urls]
Homepage = "https://github.com/17Sx/phaxtract"
Documentation = "https://github.com/17Sx/phaxtract#readme"
Repository = "https://github.com/17Sx/phaxtract"
Issues = "https://github.com/17Sx/phaxtract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phaxtract"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/gold", "/docs", "/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires CUDA GPU",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["phaxtract"]
mypy_path = "src"

# Optional `[ai]` extra: torch/transformers/pillow are absent in the lint/type CI
# job (only `[dev]` is installed), and ship partial/no stubs. They are imported
# lazily inside nuextract_engine, so relax missing-import errors for them only.
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "transformers", "transformers.*", "PIL", "PIL.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["phaxtract"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
